<resources>
    <string name="app_name">Finance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="login_text">Login</string>
    <string name="enter_your_login_credentials">Enter your Login Credentials.</string>
    <string name="password">Password</string>
    <string name="or_login_with">Or log in with</string>
    <string name="you_don_t_have_an_accoount">You don\'t HAVE AN ACCOOUNT ?</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">Example@gmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="_123_456_7890">+123 456 7890</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign up</string>
    <string name="remember_password">Remember password</string>
    <string name="stars">********</string>
    <string name="create_account_text">Create Account</string>
    <string name="signup_credentials">Enter your Signup Credentials.</string>
    <string name="text_name">Name</string>
    <string name="john_smith">John Smith</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOOUNT ?</string>
    <string name="how_to_reset_your_password">Please enter your account email\n address, and we\'ll send you instructions \n on how to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="create_new_password">Create New Password</string>
    <string name="your_new_password_must_be_different_n_from_previous_use_password">Your new password must be different \n from previous use password</string>
    <string name="save">Save</string>
    <string name="both_password_must_match">Both password must match</string>
    <string name="must_be_at_least_8_character">Must be at least 8 character</string>
    <string name="setup_your_profile">Setup your profile</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="location_adress">99 Nassau St, Toronto</string>
    <string name="choose_subscription">Choose Subscription</string>
    <string name="unlocked_all_access">Unlocked All Access</string>
    <string name="no_ads">No-Ads</string>
    <string name="buy">Buy</string>
    <string name="home">Home</string>
    <string name="news">Feed</string>
    <string name="group">Group</string>
    <string name="profile">Profile</string>
    <string name="_1550">$1550</string>
    <string name="bank_of_america">Bank of America</string>
    <string name="_08_22">08/22</string>
    <string name="_1234">1234 ... .... ....</string>
    <string name="request">Request</string>
    <string name="resent_transactions">Resent Transactions</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_n_adipisicing_elit_sed_do_eiusmod_tempor_incididunt">Lorem ipsum dolor sit amet, consectetur \n adipisicing elit, sed do eiusmod tempor incididunt.</string>
    <string name="profile_name">Michael Angelo</string>
    <string name="michael_gmil_com">Michael@gmil.com</string>
    <string name="_58_580">"$58.580 "</string>
    <string name="receive">"Receive "</string>
    <string name="_35_350">$35.350</string>
    <string name="send">Send</string>
    <string name="personal_info">Personal Info</string>
    <string name="manage_payments">Manage Payment</string>
    <string name="change_password_tv">Change Password</string>
    <string name="privacy_policy_tv">Privacy Policy</string>
    <string name="account_info">Account info</string>
    <string name="accounts">Accounts</string>
    <string name="debit_card">Debit Card</string>
    <string name="_5435_1289">5435  ****  *****  **  1289</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="add_new">"+Add new "</string>
    <string name="term_and_condition">Term and condition</string>
    <string name="termsAndConditionDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, \n sed do eiusmod tempor incididunt ut labore et dolore \n magna aliqua. Ut enim ad minim veniam, quis nostrud \n exercitation ullamco laboris nisi ut aliquip ex ea \n commodo consequat. Duis aute irure dolor in \n reprehenderit in voluptate velit esse cillum dolore eu \n fugiat nulla pariatur. Excepteur sint occaecat cupidatat \n non proident, sunt in culpa qui officia deserunt mollit \n anim id est laborum. \n
Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="trmsAndCond">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n\n Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum \n\n Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="privacypolicy">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="etGroupName">write group name here</string>
    <string name="group_name">Group Name</string>
    <string name="williamson">Williamson</string>
    <string name="scan_card">Scan Card</string>
    <string name="help_centre">Help Centre</string>
    <string name="our_superherooes_are_standing_by_for_n_service_u0026_support"><![CDATA[Our superherooes are standing by for \n service & support!]]></string>
    <string name="tell_us_how_we_can_help">Tell us how we can help?</string>
    <string name="contact_support">Contact Support</string>
    <string name="_24_7">24/7</string>
    <string name="paymne">Payments method</string>
    <string name="addNewAccount">Add New Account</string>
    <string name="_8_2023">8/2022</string>
    <string name="transfer">Transfer</string>
    <string name="select_for_transfer">Select For Transfer</string>
    <string name="for_the_books">For the Books</string>
    <string name="members">Members</string>
    <string name="alexander">Alexander</string>
    <string name="money_makers">Money Makers</string>
    <string name="new_york">New York</string>
    <string name="paypal_account">1233 **** ***** ** 1424</string>
    <string name="amount">Amount</string>
    <string name="request_money">Request Money</string>
    <string name="send_money">Send Money</string>
    <string name="available_date">Select Available Date</string>
    <string name="new_yorkk">New York</string>
    <string name="hi_smith">Hi Smith!</string>
    <string name="welcome_back">Welcome back</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter Password</string>
    <string name="news_feed">News Feed</string>
    <string name="transactions">Transactions</string>
    <string name="all_transactions">All Transactions</string>
    <string name="notification">Notification</string>
    <string name="enter_location">Enter your location</string>
    <string name="checkbox">checkbox</string>
    <string name="_7_days_free_trial_then">7 days Free trial then</string>
    <string name="view_group">View Group</string>
    <string name="stefhen_smith">Stefen Smith</string>
    <string name="edit_group">Edit Group</string>
    <string name="invite_group">Invite Group</string>
    <string name="add_members">Add Members</string>
    <string name="invite_members">Invite Members</string>
    <string name="create_group">Create Group</string>
    <string name="group_members">Group Members</string>
</resources>