<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_color"
    android:fillViewport="true"
    tools:context=".views.fragments.mainFragments.ContactSupportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_image"
            app:layout_constraintDimensionRatio="1:0.70"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_drawer_contact_support"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_18sdp"
                android:src="@drawable/back_button_bag"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/btn_back"
                app:layout_constraintBottom_toBottomOf="@id/btn_drawer_contact_support"
                app:layout_constraintEnd_toEndOf="@id/btn_drawer_contact_support"
                app:layout_constraintStart_toStartOf="@id/btn_drawer_contact_support"
                app:layout_constraintTop_toTopOf="@id/btn_drawer_contact_support" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_29sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/contact_support"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/Linear_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/ic_background_shape"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingBottom="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:background="@drawable/contact_supprt_shape"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/_24_7"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/_13ssp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins"
                    android:text="@string/help_centre"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/_13ssp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/contact_support" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/tell_us_how_we_can_help"
                android:textColor="@color/textBoldColor"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/our_superherooes_are_standing_by_for_n_service_u0026_support" />

            <TextView
                android:id="@+id/text_name"
                style="@style/text_light_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/text_name" />

            <EditText
                android:id="@+id/editText_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:textSize="@dimen/_12ssp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/edit_text_shape"
                android:inputType="text"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingLeft="@dimen/_15sdp" />


            <TextView
                android:id="@+id/textmail"
                style="@style/text_light_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editText_register_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:textSize="@dimen/_12ssp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/edit_text_shape"
                android:inputType="textEmailAddress"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingLeft="@dimen/_15sdp" />

            <TextView
                android:id="@+id/textmessage"
                style="@style/text_light_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Message" />

            <EditText
                android:id="@+id/editText_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/edit_text_shape"
                android:inputType="text"
                android:paddingVertical="@dimen/_30sdp"
                android:paddingLeft="@dimen/_20sdp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
            <TextView
                android:id="@+id/btnSave"
                style="@style/buttonstyle"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:text="@string/submit" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>